fixed menu button mobile weirdness

--- a/src/app/channels/channels.less
+++ b/src/app/channels/channels.less
@@ -118,6 +118,8 @@ span.fa-icon {
 	margin-left: 10px;
 	text-align: left;
 	margin-top: 5px;
+	position: absolute;
+	left: 100px;
 }
 
 .post-time {
