--- a/src/app/find/find.less
+++ b/src/app/find/find.less
@@ -1,5 +1,4 @@
 #search {
-  width: 350px;
   padding: 5px;
   border-radius: 5px;
 }
